--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,7 @@
     "nodemailer": "^6.9.7",
     "rate-limit-redis": "^4.2.0",
     "redis": "^4.6.11",
+    "socket.io": "^4.8.1",
     "twilio": "^4.19.3",
     "uuid": "^9.0.1",
     "winston": "^3.11.0",
